[package]
name = "file_rw"
version = "0.3.4"
edition = "2021"
description = "A library for high-performance, memory-mapped file I/O utilities."
categories = ["concurrency", "filesystem", "rust-patterns"]
authors = ["Adam Killam <adammkillam@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/amkillam/file_rw"

[dependencies]
ahash = "0.8.11"
digest = { version = "0.10.7", features = ["core-api"] }
filepath = "0.1.2"
memchr = "2.7.4"
memmap2 = "0.9.4"
sha3 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
tempfile = "3.10.1"


[lib]
bench = false #disable libtest benchmarking, use Criterion instead

[[bench]]
name = "subset_search"
harness = false
